# AUTOMOS-AI

./: README.md
AUTOMOS_AI/: CARLA_SERVER_STATUS.md  CARLA_SETUP.md  CUSTOMER_DEPLOYMENT.md  EPIC_GAMES_CARLA_GUIDE.md  PRODUCT_DEMO.md  PRODUCT_READINESS_REPORT.md  UNREAL_ENGINE_INSTALLATION.md  automated_unreal_install.py  build_carla_unreal_engine.py  carla_integration.py  carla_product_demo_report.txt  carla_test_report.txt  check_carla_status.py  create_cinematic_demo.py  create_clear_demo.py  create_demo_video.py  create_deployment_package.py  create_deployment_simple.py  create_vfx_demo.py  demo_system.py  deploy.py  download_carla_binaries.py  extended_carla_demo_report.txt  install_unreal_engine.py  run_carla_product_demo.py  run_extended_carla_demo.py  run_real_carla_demo.py  setup_carla_unreal.py  start_carla_server.py  test_carla_mock.py  test_complete_carla.py  test_complete_product.py  test_product_fixed.py  test_report.json  unreal_engine_manual_guide.py  unreal_installation_monitor.py
AUTOMOS_AI/build_system/: README.md  build.py
AUTOMOS_AI/build_system/cmake/: CMakeLists.txt
AUTOMOS_AI/build_system/scripts/: deploy_manager.py  flash_manager.py
AUTOMOS_AI/core/: __init__.py  dualad_integration.py  opendrivevla_integration.py  planning_algorithms.py  reasoning_engine.py
AUTOMOS_AI/deployments/: deployment_info.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152022/: deployment_metadata.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152022/config/: automos_config.json  platform_config.json  safety_critic_config.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152022/docs/: INSTALLATION.md  USER_GUIDE.md
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152022/scripts/: install.sh  startup.sh
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152035/: deployment_metadata.json  requirements.txt
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152035/config/: automos_config.json  full_perception_config.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152035/scripts/: automos_ai.service
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152055/: README.md  deployment_metadata.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152055/config/: ai_reasoning_config.json  automos_config.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152109/: deployment_metadata.json  main.py
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152109/config/: automos_config.json
AUTOMOS_AI/deployments/automos_ai_jetson_xavier_linux_20260218_152109/scripts/: uninstall.sh
AUTOMOS_AI/edge_optimization/: __init__.py  deployment_manager.py  edge_optimizer.py  model_quantizer.py
AUTOMOS_AI/integration/: __init__.py  framework_integration.py  system_coordinator.py
AUTOMOS_AI/monitoring/: __init__.py  system_monitor.py
AUTOMOS_AI/perception/: __init__.py  camera_processor.py  lane_detection.py  lidar_processor.py  object_detection.py  perception_pipeline.py  radar_processor.py  sensor_fusion.py
AUTOMOS_AI/safety/: __init__.py  collision_avoidance.py  emergency_override.py  safety_critic.py  safety_monitor.py
AUTOMOS_AI/video_production/: create_product_video.py  generate_demo_video.py
AUTOMOS_AI/world_model/: __init__.py  hd_map_free_navigation.py  predictive_mapping.py  world_model.py
DualAD-main/: .gitignore  LICENSE  LLM.yml  README.md  requirements.txt  set_env.sh
DualAD-main/doc/: ENV.md
DualAD-main/nuplan/planning/script/: run_ml.py  run_pdm.py  run_simulation.py
DualAD-main/nuplan/planning/simulation/planner/: abstract_idm_planner.py  idm_planner.py  lattice_idm_planner.py  occupancy_adapter.py  planner_utils.py  refinement.py  state_lattice_path_planner.py
OpenDriveVLA-main/: .gitattributes  .gitignore  README.md  pyproject.toml
OpenDriveVLA-main/docs/: 1_INSTALL.md  2_DATA_PREP.md  3_EVAL.md
OpenDriveVLA-main/drivevla/: eval_drivevla.py  inference_drivevla.py
OpenDriveVLA-main/drivevla/data_utils/: build_llava_conversation.py  nuscenes_llava_datacollector.py  nuscenes_llava_dataset.py  nuscenes_llava_distributed_sampler.py
OpenDriveVLA-main/drivevla/eval_share/: README.md  evaluation.py  metric.py
OpenDriveVLA-main/drivevla/utils/: check_meta_tensor.py  remove_mmlab_datacontainer.py  save_transformers_checkpoint.py  tensor_utils.py  trajectory_utils.py
OpenDriveVLA-main/llava/: constants.py  conversation.py  mm_utils.py
OpenDriveVLA-main/llava/model/: builder.py  llava_arch.py
OpenDriveVLA-main/llava/model/language_model/: llava_qwen.py
OpenDriveVLA-main/llava/model/multimodal_encoder/: builder.py  uniad_track_map.py
OpenDriveVLA-main/llava/model/multimodal_projector/: builder.py
OpenDriveVLA-main/llava/train/: train.py
OpenDriveVLA-main/projects/configs/stage1_track_map/: base_track_map.py
OpenDriveVLA-main/projects/mmdet3d_plugin/datasets/: nuscenes_e2e_dataset.py
OpenDriveVLA-main/projects/mmdet3d_plugin/datasets/eval_utils/: nuscenes_eval_motion.py
OpenDriveVLA-main/projects/mmdet3d_plugin/datasets/pipelines/: loading.py  transform_3d.py
OpenDriveVLA-main/projects/mmdet3d_plugin/datasets/samplers/: group_sampler.py
OpenDriveVLA-main/projects/mmdet3d_plugin/losses/: track_loss.py
OpenDriveVLA-main/projects/mmdet3d_plugin/uniad/apis/: test.py
OpenDriveVLA-main/scripts/: eval_drivevla.sh
apollo-master/apollo-master/: ARCHITECTURE_DOCUMENTATION.md
apollo-master/apollo-master/collection/planning/: README_cn.md
autoware-main/: AUTOWARE_DOCUMENTATION.md  DEMONSTRATION_OUTPUT.md  VIDEO_OUTPUT_GUIDE.md
(+32 files in other folders)
